# civic-ledger-elpaso

./: .dockerignore  .gitignore  AGENTS.md  CHECKLIST.md  CITATION-TESTING-GUIDE.md  CUSTOMGPT-SETUP.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  DOCUMENT-COLLECTION-GUIDE.md  Dockerfile  INPUT-VALIDATION-FIX.md  LATEST-STATUS-REPORT.md  LICENSE  README.md  SHIP-IT-NOW.md  SHIP-IT-PRODUCTION.md  STATUS-NOW.md  SYSTEM-PROMPT-GUIDE.md  audit-docs-quality.sh  battle-test-all-9.sh  battle-test-complete.sh  battle-test.sh  border_dc_scraper.py  citation_validator.py  civic_ledger.sqlite  clean-organize-all.sh  deploy-production.sh  deploy.sh  discover-endpoints.sh  document_loader.py  extract-and-categorize.py  feasibility_checker.py  fly.toml  instrument.js  openapi.yaml  organize-docs.sh  package-lock.json  package.json  process-corpus.sh  pyproject.toml  (+7 more)
civic-ledger-gpt/: README.md  prompt.md  pyproject.toml
civic-ledger-gpt/data/: apply_seed_patch.py  records.jsonl  reddit.jsonl  seeds.json  start_urls.txt
civic-ledger-gpt/examples/: extract_facts_request.json
civic-ledger-gpt/scripts/: run_local.sh
civic-ledger-gpt/src/civic_ledger_actions/: extract.py  indexer.py  models.py  storage.py
civic-ledger-gpt/src/civic_ledger_actions.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
civic-ledger-seedpack/: README.txt  seeds.json  start_urls.txt
dc_corpus/: minimal.jsonl  reddit.jsonl  start_urls.txt
docs/: comparable-jurisdictions.md  conversation-starters-library.md  epwater-ami-architecture.md  https_nmelc.org_wp-content_uploads_2017_03_GFR-winter2013.pdf.md  (+55 more)
graphs/: edges.csv  (+3 more)
(+1285 files in other folders)
