[project]
name = "civic-ledger-mcp"
version = "0.1.0"
description = "MCP server for Civic Ledger CustomGPT with document search and policy generation"
authors = [
    {name = "Chris Celaya", email = "chris@celayasolutions.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.24.0",
    "orjson>=3.9.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.23.0",               # PDF parsing
    "jinja2>=3.1.0",                 # Template rendering
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
civic-ledger-api = "civic_ledger_actions.main:cli"
civic-ledger-build-index = "civic_ledger_actions.indexer:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_ledger_actions"]
